--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "genkit": "^1.14.1",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.475.0",
     "next": "^15.5.4",
     "patch-package": "^8.0.0",
