--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "file-loader": "^6.2.0",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
